--- a/1. Data Cleaning.ipynb
+++ b/1. Data Cleaning.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, I will try to compare the tweets of Donald Trump, Barrack Obama, and Hillary Clinton to come up with meaningful insights"
+    "In this project, I will try to compare the tweets of Donald Trump, Barrack Obama, and Hillary Clinton to come up with meaningful insights"
    ]
   },
   {
@@ -37,12 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import re"
    ]
   },
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,12 +67,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check out the data"
+    "### Check out the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +204,7 @@
        "4  Debate polls look great - thank you!\\r\\n#MAGA ...  DonaldTrump  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +319,7 @@
        "4    False  \"That’s how we will overcome the challenges we...  BarackObama  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +441,7 @@
        "4  \"All the progress we've made these last 8 year...  HillaryClinton  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +556,7 @@
        "4  DonaldTrump  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +683,7 @@
        "4  DonaldTrump  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +863,7 @@
        "2124  BarackObama  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -899,6 +898,128 @@
     "print(\"Number of tweets by Trump: \", trump.shape[0])\n",
     "print(\"Number of tweets by Obama: \", obama.shape[0])\n",
     "print(\"Number of tweets by Hillary: \", clinton.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>retweet</th>\n",
+       "      <th>text</th>\n",
+       "      <th>author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-10-07</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Here is my statement.</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-10-10</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Is this really America? Terrible!</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-10-08</td>\n",
+       "      <td>False</td>\n",
+       "      <td>The media and establishment want me out of the...</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-10-11</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Wow, @CNN Town Hall questions were given to Cr...</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-10-10</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Debate polls look great  thank you!#MAGA #Amer...</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date  retweet                                               text  \\\n",
+       "0 2016-10-07    False                              Here is my statement.   \n",
+       "1 2016-10-10    False                  Is this really America? Terrible!   \n",
+       "2 2016-10-08    False  The media and establishment want me out of the...   \n",
+       "3 2016-10-11    False  Wow, @CNN Town Hall questions were given to Cr...   \n",
+       "4 2016-10-10    False  Debate polls look great  thank you!#MAGA #Amer...   \n",
+       "\n",
+       "        author  \n",
+       "0  DonaldTrump  \n",
+       "1  DonaldTrump  \n",
+       "2  DonaldTrump  \n",
+       "3  DonaldTrump  \n",
+       "4  DonaldTrump  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trump.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Writing to CSV files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use index=False so that you don't save the first unnamed column in the CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trump.to_csv(\"data/DonaldTrumpClean.csv\", index=False)\n",
+    "obama.to_csv(\"data/BarackObamaClean.csv\", index=False)\n",
+    "clinton.to_csv(\"data/HillaryClintonClean.csv\", index=False)"
    ]
   },
   {
