Add insights and touch-up for plots

--- a/4. Topic Modelling .ipynb
+++ b/4. Topic Modelling .ipynb
@@ -11,27 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, I will try to compare the tweets of Donald Trump, Barrack Obama, and Hillary Clinton to come up with meaningful insights"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this notebook, I will try to classify their tweets under different topics to judge who talks about what"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are 3 CSV files which will be used:\n",
-    "1. DonaldTrumpClean\n",
-    "2. BarackObamaClean\n",
-    "3. HillaryClintonClean\n",
-    "\n",
-    "All 3 have the same structure\n",
-    "date,retweet,text,author"
+    "In this notebook, I will try to classify their tweets under different topics to analyse the different headings the politcians talk about"
    ]
   },
   {
@@ -41,9 +21,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "import nltk\n",
     "# nltk.download('wordnet')\n",
     "from nltk.corpus import wordnet as wn\n",
@@ -80,36 +57,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8439 2125 3256\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(trump), len(obama), len(clinton))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Start Modelling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trumpTweetList = list(trump.text)"
    ]
   },
   {
@@ -164,7 +115,14 @@
    "outputs": [],
    "source": [
     "stop_words = set(stopwords.words('english'))\n",
-    "stop_words.update(['@realdonaldtrump', '@realdonaldtrump.', '.@realdonaldtrump', 'trump', 'donald', 'Donald trump'])\n"
+    "stop_words.update(['@realdonaldtrump', '@realdonaldtrump.', '.@realdonaldtrump', 'trump', 'donald', 'Donald trump'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare text for LDA"
    ]
   },
   {
@@ -194,6 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trumpTweetList = list(trump.text)\n",
     "text_data = []\n",
     "for line in trumpTweetList:\n",
     "    tokens = prepare_text_for_lda(line)    \n",
@@ -331,6 +290,18 @@
     "import pyLDAvis.gensim\n",
     "lda_display = pyLDAvis.gensim.prepare(lda, corpus, dictionary, sort_topics=False)\n",
     "pyLDAvis.display(lda_display)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "**Insights** <br/>\n",
+    "As evident from the term frequency in topic 3, the topic Trump talks about most, is `President Obama`. <br/>\n",
+    "The second most frequented topic (Topic 1) is about `Making America Great`, and `Global warming`. <br/>\n",
+    "The third most frequented topic (Topic 2) is about `Entrepreneuship`, `success`, and being `positive`. <br/>\n",
+    "</div>"
    ]
   },
   {
