Finishing touch ups

--- a/1. Data Cleaning.ipynb
+++ b/1. Data Cleaning.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4  Debate polls look great - thank you!\\r\\n#MAGA ...  DonaldTrump  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "4    False  \"That’s how we will overcome the challenges we...  BarackObama  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "4  \"All the progress we've made these last 8 year...  HillaryClinton  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,19 +586,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>retweet</th>\n",
+       "      <th>text</th>\n",
+       "      <th>author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2120</th>\n",
+       "      <td>2014-01-02</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Luis can tell people hes going to the doctor ...</td>\n",
+       "      <td>BarackObama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2121</th>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Rosetta from Missouri is covered. #ThisIsWhy ...</td>\n",
+       "      <td>BarackObama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2122</th>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>#ThisIsWhy Virginia can go to the doctor agai...</td>\n",
+       "      <td>BarackObama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2123</th>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>See stories of people who just got covered in...</td>\n",
+       "      <td>BarackObama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2124</th>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>This is why the Affordable Care Act matters. ...</td>\n",
+       "      <td>BarackObama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date  retweet                                               text  \\\n",
+       "2120 2014-01-02    False   Luis can tell people hes going to the doctor ...   \n",
+       "2121 2014-01-01    False   Rosetta from Missouri is covered. #ThisIsWhy ...   \n",
+       "2122 2014-01-01    False   #ThisIsWhy Virginia can go to the doctor agai...   \n",
+       "2123 2014-01-01    False   See stories of people who just got covered in...   \n",
+       "2124 2014-01-01    False   This is why the Affordable Care Act matters. ...   \n",
+       "\n",
+       "           author  \n",
+       "2120  BarackObama  \n",
+       "2121  BarackObama  \n",
+       "2122  BarackObama  \n",
+       "2123  BarackObama  \n",
+       "2124  BarackObama  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#By printing the tail, we can confirm that all pre-2014 tweets have been dropped"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#By printing the tail, we can confirm that all pre-2014 tweets have been dropped\n",
     "obama.tail()"
    ]
   },
@@ -611,9 +691,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of tweets by Trump:  8439\n",
+      "Number of tweets by Obama:  2125\n",
+      "Number of tweets by Hillary:  3256\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of tweets by Trump: \", trump.shape[0])\n",
     "print(\"Number of tweets by Obama: \", obama.shape[0])\n",
@@ -622,9 +712,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>retweet</th>\n",
+       "      <th>text</th>\n",
+       "      <th>author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-10-07</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Here is my statement.</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-10-10</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Is this really America? Terrible!</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-10-08</td>\n",
+       "      <td>False</td>\n",
+       "      <td>The media and establishment want me out of th...</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-10-11</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Wow,  Town Hall questions were given to Crook...</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-10-10</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Debate polls look great  thank you! #MAGA #Am...</td>\n",
+       "      <td>DonaldTrump</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        date  retweet                                               text  \\\n",
+       "0 2016-10-07    False                              Here is my statement.   \n",
+       "1 2016-10-10    False                  Is this really America? Terrible!   \n",
+       "2 2016-10-08    False   The media and establishment want me out of th...   \n",
+       "3 2016-10-11    False   Wow,  Town Hall questions were given to Crook...   \n",
+       "4 2016-10-10    False   Debate polls look great  thank you! #MAGA #Am...   \n",
+       "\n",
+       "        author  \n",
+       "0  DonaldTrump  \n",
+       "1  DonaldTrump  \n",
+       "2  DonaldTrump  \n",
+       "3  DonaldTrump  \n",
+       "4  DonaldTrump  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trump.head()"
    ]
@@ -645,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
